fixed - litle bug member.js, nav arrows z-index, mobile-footer-nav made visible member/contact.cssgit add .git add .! issues gitpod don't know if worked

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -404,6 +404,12 @@
             {
                 display: none;
             }
+
+            .nav-arrow-cont.nav-arrow-cont-mobile
+            {
+                /* display: block; */
+                display: flex;
+            }
             
             .main-cont
             {
