--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -695,6 +695,7 @@
             display: flex;
             justify-content: space-between;
             padding: 0 51px;
+            z-index: 9999999999;
         }
         
         .nav-arrow
